about me sort of done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</script>
 
 	<!-- SITE TITLE -->
-	<title>👩🏻‍💻Michelle Kim</title>
+	<title>Michelle Kim👩🏻‍💻</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,116 +54,108 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#work">work</a></li>
-				<li><a href="#me">about</a></li>
-				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+				<li><a href="#about">about</a></li>
 			</ul>
 		</div>
 	</div>
 </section>
-
 </head>
 
 <body>
-
 	<section id="introduction">
 		<div class="container">
 			<div class="row">
-				<!-- <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-					<img class="center" src="images/profilephoto.png" height="168" width="168" alt="me at brooklyn">
-				</div> -->
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h5 class= "introduction-text text-center gelasio" >Ethical and robust designs by a fast paced, product thinking designer who loves details and thrives in amiguity	<i class="fas fa-long-arrow-alt-down logo center"></i>
-</h5>
-
-
-
+				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+				</div>
+					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+					<h5 class= "introduction-text text-center gelasio" >Ethical and robust designs by a fast paced, product thinking designer who loves details and thrives in amiguity.	</h5>
 					</div>
-					<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<img src="images/me.jpg" width=100% alt="me at brooklyn">
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 					</div>
-				</div> -->
 			</div>
 		</div>
 	</section>
-
 
 <!-- Portfolio Section -->
 <section id="work">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<!-- <p class="selected-work-text">filters</p> -->
 				<!-- Filtering -->
-				<div class="iso-section">
-					<ul class="filter-wrapper clearfix amiko">
-							<!-- <li>Select:</li> -->
-              <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
-              <li><a href="#" class="opc-main-bg" data-filter=".design">DESIGN</a></li>
-              <li><a href="#" class="opc-main-bg" data-filter=".research"> RESEARCH</a></li>
-              <li><a href="#" class="opc-main-bg" data-filter=".arvr">AR&VR</a></li>
-					</ul>
+				<ul class="filter-wrapper clearfix amiko">
+            <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
+            <li><a href="#" class="opc-main-bg" data-filter=".design">DESIGN</a></li>
+            <li><a href="#" class="opc-main-bg" data-filter=".research">RESEARCH</a></li>
+            <li><a href="#" class="opc-main-bg" data-filter=".arvr">AR&VR</a></li>
+				</ul>
   			<div class="wow fadeIn" data-wow-delay="0.4s">
         	<div class="iso-box-wrapper col4-iso-box">
 						<!-- lexmark -->
-						<div class="content iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="plexmark">
-							<a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out"></a>
+						<div class="iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="plexmark">
+							<a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out">
 							<div class="selectedprojects-des">
 			 					<h2>LEXMARK</h2>
 			 					<h4>Internship | UX Design</h4>
 		 					</div>
+							</a>
 	 					</div>
-						<div class="content iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pvegout">
-            	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out"></a>
+						<div class="iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pvegout">
+            	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out">
 							<div class="selectedprojects-des">
 								<h2>VEG OUT</h2>
 								<h4>Passion Project | Product Design</h4>
 							</div>
+							</a>
 						</div>
-						<div class="content iso-box design research col-lg-4 col-md-4 col-sm-6 col-xs-12" id="ppawls">
-			 				<a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out"></a>
+						<div class="iso-box design research col-lg-4 col-md-4 col-sm-6 col-xs-12" id="ppawls">
+			 				<a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out">
 			 				<div class="selectedprojects-des">
 								<h2>PAWLS</h2>
 								<h4>Course Project | Product Design</h4>
 							</div>
+							</a>
 						</div>
-						<div class="research content iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcnbc">
-				 			<a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
+						<div class="research iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcnbc">
+				 			<a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out">
 				 			<div class="selectedprojects-des">
 								<h2>CNBC</h2>
 								<h4>Client Project | UX Research</h4>
 							</div>
+							</a>
 						</div>
-						<div class="content iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgarden">
- 							<a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out"></a>
+						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgarden">
+ 							<a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
 								<h2>Garden</h2>
 								<h4>Course Project | VR Design</h4>
 							</div>
+							</a>
 						</div>
-						<div class="content iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pbrewery">
- 							<a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
+						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pbrewery">
+ 							<a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out">
  							<div class="selectedprojects-des">
 								<h2>brewARy</h2>
 								<h4>Course Project | AR Design</h4>
 							</div>
+							</a>
 						</div>
-						<div class="design content iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgdesignchallenge">
- 							<a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
+						<div class="design iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgdesignchallenge">
+ 							<a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
 								<h2>UVENT</h2>
 								<h4>Design Challenge | Product Design</h4>
 							</div>
+							</a>
 						</div>
-						<div class="research content iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcomerica" onclick="location.href='comerica.html'">
- 							<a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out"></a>
+						<div class="research iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcomerica" onclick="location.href='comerica.html'">
+ 							<a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
 								<h2>COMERICA</h2>
 								<h4>Client Project | UX Research</h4>
 							</div>
-						</div>
-               			</div>
-               		</div>
-
+							</a>
+            </div>
+        	</div>
 				</div>
 			</div>
 		</div>
@@ -171,15 +163,48 @@
 </section>
 
 
-<section id="me">
+<section id="about">
 	<div class="container">
 		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+				<img src="images/me.jpg" width=100% alt="me at brooklyn">
+			</div>
+		<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<h1 class="amiko" style= "text-align: center;">about</h1>
+		</div> -->
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 gelasio">
+			<h1 class="amiko">EDUCATION</h1>
+			<h3>University of Michigan - Ann Arbor</h3>
+			<p>M.S. Human Computer Interaction</p>
+			<h5>2020</h5>
+				<hr align="left">
+			<h3>University of Michigan - Ann Arbor</h3>
+			<p>B.S. Biopsychology & Cognition</p>
+			<h5>2018</h5>
+
+		</div>
+
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 gelasio">
+		</div>
+
+		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 gelasio">
+			<h1 class="amiko">EXPERIENCE</h1>
+			<h3>Lexmark</h3>
+			<p>UX Design Intern</p>
+			<h5>may-aug 2019</h5>
+			<hr align="left">
+			<h3>CNBC NY</h3>
+			<p>UX Researcher</p>
+			<h5>jan-april 2019</h5>
+			<hr align="left">
+			<button class="btn">Resume</button>
+
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 gelasio">
+		</div>
 		</div>
 	</div>
 </section>
-
-
-
 
 <!-- footer section -->
 <footer>
