--- a/pawls.html
+++ b/pawls.html
@@ -33,25 +33,25 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-			</button>
-			<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
+	<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon icon-bar"></span>
+					<span class="icon icon-bar"></span>
+					<span class="icon icon-bar"></span>
+				</button>
+				<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="index.html#work">work</a></li>
+					<li><a href="index.html#about">about</a></li>
+					<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+				</ul>
+			</div>
 		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html#work">WORK</a></li>
-				<li><a href="index.html#about">ABOUT</a></li>
-				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
-			</ul>
-		</div>
-	</div>
-</section>
+	</section>
 
 <div class="progress-wrap">
 	<svg class="progress-circle" width="100%" height="100%" viewBox="-1 -1 102 102">
