--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<p>UX Researcher</p>
 			<h5>jan-april 2019</h5>
 			<hr align="left">
-			<button class="btn">Resume</button>
+			<a target="_blank" href="http://kminjin.com/documents/michellekim.pdf"><button class="btn">Resume</button></a>
 
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 gelasio">
