--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 				</div>
 					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-					<h5 class= "introduction-text text-center gelasio" >Ethical and robust designs by a fast paced, product thinking designer who loves details and thrives in amiguity.	</h5>
+					<h5 class= "introduction-text text-center gelasio" >Robust design and research by a product thinking designer who loves details and thrives in amiguity.	</h5>
 					</div>
 					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 					</div>
@@ -159,7 +159,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div><br><br>
 </section>
 
 
