--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
+
 	  gtag('config', 'UA-144593656-1');
 	</script>
 
+
 	<!-- SITE TITLE -->
-	<title>Michelle Kim👩🏻‍💻</title>
+	<title>Lexmark</title>
+
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,9 +36,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+
 </head>
-
-
+<body>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
