--- a/lexmark.html
+++ b/lexmark.html
@@ -29,12 +29,19 @@
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
+
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-	<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -68,7 +75,7 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
 					<h1 class="headingtitle bold">Helping ServiceNow Service Now</h1>
-					<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">UX Design - Web Platform</h5>
+					<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">UX Internship - Web Platform</h5>
 				</div>
 			</div>
 		</div>
@@ -85,31 +92,20 @@
 	<section id="about">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-						<h4 class="subheading">Role</h4>
-						<p>UX Design Intern at Lexmark<br>
-						May - Aug 2019<br>
+				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+						<h4 class="amiko bold">MAY - AUG 2019</h4>
+						<p >As a UX design intern at Lexmark, I independently led a user-centered design project to redesign ServiceNow, an internal service tool for Lexmark employees. I supported design decisions with user research and the final design increased the goal success rate among the 10 most common tasks on the platform by 36%.
 					</p>
 					</div>
 
-				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-						<h4 class="subheading">Tools & Skills</h4>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+						<h4 class="amiko bold">CONTRIBUTION</h4>
 						<h5 style="font-family: 'Quicksand', sans-serif;">Design</h5>
-						<p>Adobe XD, Axure, Lo-fi & High-fi Prototyping, Documentation for Developers</p>
+						<p>High-fi on Axure, Lo-fi on Adobe XD, Documentation for Developers</p>
 						<h5 style="font-family: 'Quicksand', sans-serif;">Research</h5>
 						<p>Interviews, Card Sorts, Usability Tests</p><br><br>
 					</div>
-			</div>
-			<div class= "row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4 class="subheading">Project Context</h4>
-					<p> As an intern, I independently led a user-centered design project to redesign ServiceNow, an internal service tool for Lexmark employees to submit requests for any items or services they need. I supported design decisions with user research and increased the goal success rate among the 10 most common tasks on the platform by 36%.</p>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-				</div>
+
 			</div>
 		</section>
 
