--- a/vegout.html
+++ b/vegout.html
@@ -32,7 +32,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-	<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
