--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 	<!-- SITE TITLE -->
-	<title>Lexmark</title>
+	<title>Michelle</title>
 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
