--- a/lexmark.html
+++ b/lexmark.html
@@ -75,7 +75,7 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
 					<h1 class="headingtitle bold">Helping ServiceNow Service Now</h1>
-					<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">UX Internship - Web Platform</h5>
+					<h5 class="normal" style="font-family: 'Quicksand', sans-serif;">UX Internship - Web</h5>
 				</div>
 			</div>
 		</div>
