--- a/lexmark.html
+++ b/lexmark.html
@@ -183,7 +183,7 @@
 				</div>
 			</div><br>
 
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".4s">
 						<p>1. The new design allows employees to begin with their location and the system only displays the relevant requests forms for the selected location.<br>
 							<br>
@@ -208,7 +208,7 @@
 					<div class="col-lg-6 col-md-6 col-sm-8 wow fadeInUp" data-wow-delay=".8s">
 							<p>New Design</p>
 							<img src="images/ergonomicformnew.png" class="img-responsive" style="max-width:100%"><br></div>
-				</div>
+				</div> -->
 </section>
 
 <section id="section">
