--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         	<div class="iso-box-wrapper col4-iso-box">
 						<!-- lexmark -->
 						<div class="iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="plexmark">
-							<a href="lexmark.html" ><img src="images/lexmarkhomepage.png" alt="Veg Out">
+							<a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out">
 							<div class="selectedprojects-des">
 			 					<h2>LEXMARK</h2>
 			 					<h4>Internship | UX Design</h4>
