--- a/lexmark.html
+++ b/lexmark.html
@@ -75,7 +75,7 @@
 				<div class="col-md-12 col-sm-12 text-center">
 					<p class="title bold">Helping ServiceNow Service Now</p><br>
 					<!-- <p>Web</p> -->
-					<p>May - Aug 2019</p><br>
+					<p>May - Aug 2019</p><br>	<br>
 </div>
 <div class="col-md-2 col-sm-12">
 
@@ -137,13 +137,13 @@
 						</p>
 					</div> -->
 </div>
-<br><br>
+<br><br>	<br><br>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.4s">
+				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
 					<img src="images/lexmarkquotes.png" class="img-responsive" style="max-width:100%">
 				</div>
 			</div>
@@ -170,45 +170,48 @@
 					<br>
 				</div> -->
 </div>
-<br><br>
+<br><br>	<br><br>
 		<div class="row">
 
-				<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+				<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
 						<p class="text-center bold">Previous Design</p>
 						<img src="images/newcomparison.png" class="img-responsive center" style="max-width:100%"><br>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+				<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
 						<p class="text-center bold">New Design</p>
 						<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%"><br>
 				</div>
 			</div><br>
 
-			<!-- <div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".4s">
-						<p>1. The new design allows employees to begin with their location and the system only displays the relevant requests forms for the selected location.<br>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
+						<p>1. The new design only displays the relevant requests forms for the selected location.<br>
 							<br>
 					2. The drop down interaction for form selection is replaced with cards that have description for each form.</p>
 				</div>
-			</div>
+			</div><br><br><br><br><br>
 
 			<div class="row">
-					<div class="col-lg-3 col-md-3 col-sm-12 wow fadeInUp" data-wow-delay=".4s">
-						<p>Design Changes</p>
-						<p>1. Employees did not know what "Amia" or "Leap" meant. The new design has help icons for more information.<br>	<br>
-2. Standard cube sizing was not consisntent in the old design. The new design instead asks a separate question entirely, and even gives employees the option to ask for help.<br>	<br>
-3. An employee can choose either a single monitor or dual monitor but not both. The new design no longer has checkboxes and instead uses radio buttons to prevent multiple options being selected.</p>
-
-					</div>
-					<div class="col-lg-3 col-md-3 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
-						<p>Previous Design</p>
+					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+						<h4 class="text-center">Previous Design</h4>
 								<img src="images/ergonomicformold.png" class="img-responsive" style="max-width:100%">
 
 
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-8 wow fadeInUp" data-wow-delay=".8s">
-							<p>New Design</p>
+					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".6s">
+							<h4 class="text-center">New Design</h4>
 							<img src="images/ergonomicformnew.png" class="img-responsive" style="max-width:100%"><br></div>
-				</div> -->
+				</div><br>
+
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".6s">
+						<p>1. There are help texts available for unclear terms.<br>	<br>
+2. Users are given the option to ask for help when it comes to entering technical information such as dimensions.<br>	<br>
+3. Errors are prevented whenever possible, such as using radio buttons instead of checkboxes if there can only be one option selected.
+</p></div>
+</div>
+</div>
+</div>
 </section>
 
 <section id="section">
@@ -219,9 +222,10 @@
 			<h3>IMPACT</h3>
 		</div>
 	</div>
+	<br><br>
 	<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<p class="mont">My Design will alleviate the workflow of 5000+ employees</p>
+				<p class="mont">My design will alleviate the workflow of 5000+ employees</p>
 				</div>
 
 				<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -257,7 +261,15 @@
 			<div class="col-lg-12 col-md-12 col-sm-12">
 				<h3>DESIGN PROCESS</h3>
 			</div>
+
 		</div>
+
+		<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<p class="mont">A four phase design process</p>
+					</div>
+	</div>
+	<br><br>	<br>
 		<div class= "row">
 			<div class="col-lg-12 col-md-12 col-sm-12">
 			<img src="images/lexmarkprocess.png" class="img-responsive" style="max-width:100%">
@@ -341,20 +353,20 @@
 									<h2>Phase 2 of 4: Exploring</h2>
 									</div>
 								</div><br><br>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-lg col-md-12 col-sm-12">
 					<p>I sent out an online card sort task with the titles of 10 forms to Lexmark employees and personally conducted 10 card sorts with employees. The tests demonstrated that the current organization of content was no where near the results of the card sorts. I also had enough data from the previous baseline usability test to support design decisions. </p>
-				</div></div>
+				</div></div> -->
 				<div class="row">
 					<div class="col-lg col-md-12 col-sm-12">
 						<h3>NEW INFORMATION ARCHITECTURE</h3>
 					</div></div>
 						<div class="row">
-							<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+							<!-- <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
 									<p>In the previous design, when requesting a security camera, "Site Operations Security Request" seems like a great option, until one clicks on the form and realizes the form is only for Zhuhai, China. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p>
-						</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-			<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%"><br>
+						</div> -->
+				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+			<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%"><br><br>
 		</div>
 	</div>
 			<div class="row">
@@ -395,11 +407,11 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-12">
-					<p>After one design review and a final walkthrough with the design team to work on strings, the design for comparison usability testing was finalized! <br><br>The video demonstrates a fully functioning prototype on Axure.</p><br>
-
-				</div>
-					<div class="col-lg-8 col-md-8 col-sm-12">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+						<p class="mont">Fully functioning prototype on Axure</p>
+</div>
+</div><br><br><br>
+					<div class="col-lg-12 col-md-12 col-sm-12">
 					<iframe class="center" title="vimeo-player" src="https://player.vimeo.com/video/384256205?muted=1&title=0&byline=0&portrait=0" width="640" height="430" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
@@ -422,10 +434,17 @@
 								                   <h3>FINAL USABILITY TEST</h3>
 								                 </div>
 															 </div>
+
+															 <div class="row">
+																		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+																			<p class="mont">My design demonstrated a 36% improvement</p>
+																		</div>
+
+																	</div><br><br><br>
 															 		 <div class="row">
-																 <div class="col-lg-6 col-md-6 col-sm-12">
-								                   <P>Usability testing of the new design showed a 36% improvement. Like the previous test, we recruited ten employees and each test included ten of the same tasks. After the final round of testing, I made minor changes to strings to clear up some confusion in hopes to raise the 89% success rate before writing the documentation for developers.</p></div>
-																		 <div class="col-lg-6 col-md-6 col-sm-12">
+																 <!-- <div class="col-lg-6 col-md-6 col-sm-12">
+								                   <P>Usability testing of the new design showed a 36% improvement. Like the previous test, we recruited ten employees and each test included ten of the same tasks. After the final round of testing, I made minor changes to strings to clear up some confusion in hopes to raise the 89% success rate before writing the documentation for developers.</p></div> -->
+																		 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <img src="images/lexmarkfinaltest.png" class="img-responsive" style="max-width:100%"></div></div>
 								              </div>
 								             </div>
