--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="plexmark">
 							<a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out">
 							<div class="selectedprojects-des">
-			 					<h2>LEXMARK</h2>
+			 					<h2 class="bold">LEXMARK</h2>
 			 					<h4>Internship | UX Design</h4>
 		 					</div>
 							</a>
@@ -105,7 +105,7 @@
 						<div class="iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pvegout">
             	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out">
 							<div class="selectedprojects-des">
-								<h2>VEG OUT</h2>
+								<h2 class="bold">VEG OUT</h2>
 								<h4>Passion Project | Product Design</h4>
 							</div>
 							</a>
@@ -113,7 +113,7 @@
 						<div class="iso-box design research col-lg-4 col-md-4 col-sm-6 col-xs-12" id="ppawls">
 			 				<a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out">
 			 				<div class="selectedprojects-des">
-								<h2>PAWLS</h2>
+								<h2 class="bold">PAWLS</h2>
 								<h4>Course Project | Product Design</h4>
 							</div>
 							</a>
@@ -121,7 +121,7 @@
 						<div class="research iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcnbc">
 				 			<a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out">
 				 			<div class="selectedprojects-des">
-								<h2>CNBC</h2>
+								<h2 class="bold">CNBC</h2>
 								<h4>Client Project | UX Research</h4>
 							</div>
 							</a>
@@ -129,7 +129,7 @@
 						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgarden">
  							<a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
-								<h2>Garden</h2>
+								<h2 class="bold">Garden</h2>
 								<h4>Course Project | VR Design</h4>
 							</div>
 							</a>
@@ -137,7 +137,7 @@
 						<div class="iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pbrewery">
  							<a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out">
  							<div class="selectedprojects-des">
-								<h2>brewARy</h2>
+								<h2 class="bold">brewARy</h2>
 								<h4>Course Project | AR Design</h4>
 							</div>
 							</a>
@@ -145,7 +145,7 @@
 						<div class="design iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pgdesignchallenge">
  							<a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
-								<h2>UVENT</h2>
+								<h2 class="bold">UVENT</h2>
 								<h4>Design Challenge | Product Design</h4>
 							</div>
 							</a>
@@ -153,7 +153,7 @@
 						<div class="research iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="pcomerica" onclick="location.href='comerica.html'">
  							<a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out">
  							<div class="selectedprojects-des">
-								<h2>COMERICA</h2>
+								<h2 class="bold">COMERICA</h2>
 								<h4>Client Project | UX Research</h4>
 							</div>
 							</a>
@@ -177,11 +177,11 @@
 		</div> -->
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 gelasio">
 			<h1 class="amiko">EDUCATION</h1>
-			<h3>University of Michigan - Ann Arbor</h3>
+			<h2>University of Michigan - Ann Arbor</h2>
 			<p>M.S. Human Computer Interaction</p>
 			<h5>2020</h5>
 				<hr align="left">
-			<h3>University of Michigan - Ann Arbor</h3>
+			<h2>University of Michigan - Ann Arbor</h2>
 			<p>B.S. Biopsychology & Cognition</p>
 			<h5>2018</h5>
 
@@ -192,11 +192,11 @@
 
 		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 gelasio">
 			<h1 class="amiko">EXPERIENCE</h1>
-			<h3>Lexmark</h3>
+			<h2>Lexmark</h2>
 			<p>UX Design Intern</p>
 			<h5>may-aug 2019</h5>
 			<hr align="left">
-			<h3>CNBC NY</h3>
+			<h2>Comerica Bank</h2>
 			<p>UX Researcher</p>
 			<h5>jan-april 2019</h5>
 			<hr align="left">
