--- a/lexmark.html
+++ b/lexmark.html
@@ -137,11 +137,8 @@
 						</p>
 					</div> -->
 </div>
-<br><br>	<br><br>
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-				</div>
-			</div>
+<br><br>
+
 			<div class="row">
 				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
 					<img src="images/lexmarkquotes.png" class="img-responsive" style="max-width:100%">
@@ -205,9 +202,9 @@
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay=".6s">
-						<p>1. There are help texts available for unclear terms.<br>	<br>
+						<p>1. There are helper texts available for each category.<br>	<br>
 2. Users are given the option to ask for help when it comes to entering technical information such as dimensions.<br>	<br>
-3. Errors are prevented whenever possible, such as using radio buttons instead of checkboxes if there can only be one option selected.
+3. Errors are prevented whenever possible, such as using radio buttons instead of checkboxes if only one option can be selected.
 </p></div>
 </div>
 </div>
@@ -222,7 +219,6 @@
 			<h3>IMPACT</h3>
 		</div>
 	</div>
-	<br><br>
 	<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<p class="mont">My design will alleviate the workflow of 5000+ employees</p>
@@ -232,18 +228,18 @@
 					<p>Between the old and new design, I saw a 36% overall increase in success rates among 10 common tasks on ServiceNow. Employees reported higher satisfaction ratings and increased confidence in that the submitted requests will be completed.
 					</p>
 				</div> -->
-</div><br><br>
+</div>
 		<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".9s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".4s">
 						<!-- <h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4> -->
 						<br><br><img src="images/trophy.png" class="img-responsive center" style="max-width:30%"><br>
 						<p>Presented my project to Lexmark and placed 2nd in the "non-engineering" category.</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".6s">
 						<br><br><img src="images/like.png" class="img-responsive center" style="max-width:30%"><br>
 						<p>Demonstrated to upper level management that working on internal tools is just as important as working on customer facing products.</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1.1s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".8s">
 					<br><br><img src="images/happy.png" class="img-responsive center" style="max-width:30%"><br>
 <p>Highlighted the importance of UX research to a company that is code first, revise later.</p>
 				</div>
@@ -302,7 +298,7 @@
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
 			<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
-			<p>Conduct a card sort and come up with a new information architecture structure that best reflects users' existing mental models.</p><br>
+			<p>Conduct a card sort and come up with a new information architecture structure that best reflects users' existing mental models.</p><br><br><br><br>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
 	<h4 style="color:#145930;">PAIN POINT II</h4>
@@ -311,12 +307,12 @@
 <div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
 	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
 	<p>Give users context and prevent errors whereever possible. Help build users' confidence by making it clear they are taking the correct or wrong steps. </p><br>
-</div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1s">
+<br><br><br></div>
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".9s">
 	<h4 style="color:#145930;">PAIN POINT III</h4>
 	<p>The forms were extensive and pushed users to phone in requests rather than use the existing online system. </p>
 </div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1s">
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".9s">
 	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
 	<p>Make the online system seem less daunting by redesigning all 10 forms. Make them clear and concise.</p>
 </div>
@@ -352,7 +348,7 @@
 								<div class="col-md-12 col-sm-12 text-center">
 									<h2>Phase 2 of 4: Exploring</h2>
 									</div>
-								</div><br><br>
+								</div><br><br><br><br><br><br>
 			<!-- <div class="row">
 				<div class="col-lg col-md-12 col-sm-12">
 					<p>I sent out an online card sort task with the titles of 10 forms to Lexmark employees and personally conducted 10 card sorts with employees. The tests demonstrated that the current organization of content was no where near the results of the card sorts. I also had enough data from the previous baseline usability test to support design decisions. </p>
@@ -360,47 +356,63 @@
 				<div class="row">
 					<div class="col-lg col-md-12 col-sm-12">
 						<h3>NEW INFORMATION ARCHITECTURE</h3>
-					</div></div>
+					</div></div><br><br>
 						<div class="row">
 							<!-- <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
 									<p>In the previous design, when requesting a security camera, "Site Operations Security Request" seems like a great option, until one clicks on the form and realizes the form is only for Zhuhai, China. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p>
 						</div> -->
 				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
-			<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%"><br><br>
+			<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%">
 		</div>
-	</div>
+</section>
+
+<section id="graybg">
+		<div class="container">
+					<div class="content">
 			<div class="row">
 				<div class="col-lg col-md-12 col-sm-12">
 						<h3>DESIGN CONCEPT</h3>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12">
+					<p class="mont">What I kept in mind while designing</p><br><br><br>
+</div>
+</div>
 				<div class= "row">
-					<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.7s">
-					<h4>01 Forms can be dynamic</h4>
-					<p>Forms do not always have to display all the information at first load. Only display and ask for information when necessary. Make information appear based on what they select in the forms.</p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.8s">
-				<h4>02 Prevent user error</h4>
-				<p>Have clear hierarchy and provide categories for the information to keep the forms digestible at a glance. Limit user actions to prevent error (e.g. using radio buttons rather than checkboxes).</p>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.9s">
-			<h4>03 Give users more context</h4>
-			<p>Build users confidence in their decision making processes by providing helper texts and description. Adding more text does not automatically make the design more convoluted if it is done intelligently.</p>
-		</div>
-			</div>
+					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+						<img src="images/numberone.png" class="img-responsive" style="max-width:90%"></div>
+
+					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
+					<p>Forms do not always have to display all the information at first load. Make information appear based on what they select in the forms. Keep forms dynamic.</p><br><br>
+				</div></div>
+				<div class= "row">
+					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+						<img src="images/numbertwo.png" class="img-responsive" style="max-width:90%"></div>
+
+					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
+					<p>Prevent user error by keeping the information digestible at a glance and limiting user actions (e.g. using radio buttons rather than checkboxes will only allow users to select one option).</p><br>
+				</div></div>
+				<div class= "row">
+					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
+						<img src="images/numberthree.png" class="img-responsive" style="max-width:90%"></div>
+
+					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
+					<p>Build users confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
+				</div></div>
 		</div>
 		</div>
 	</section>
 
 
-	<section id="graybg">
+	<section id="section">
 			<div class="container">
 						<div class="content">
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-center">
 									<h2>Phase 3 of 4: Materializing</h2>
 									</div>
-								</div><br><br>
+								</div><br><br><br><br><br>
 			<div class="row">
 				<div class="col-lg col-md-12 col-sm-12">
 					<h3>HIGH FIDELITY PROTOTYPE</p>
@@ -420,7 +432,7 @@
 </section>
 
 
-													 <section id="section">
+													 <section id="graybg">
 													 	<div class="container">
 															<div class="content">
 													 		<div class="row">
@@ -428,7 +440,7 @@
 													 				<h2>Phase 4 of 4: Validation</h2>
 																	</div>
 																</div>
-																<br><br>
+															<br><br><br><br><br>
 															 <div class="row">
 																 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <h3>FINAL USABILITY TEST</h3>
@@ -450,23 +462,31 @@
 								             </div>
 													 </section>
 
-													 <section id="graybg">
+													 <section id="section">
 														<div class="container">
 															<div class="content">
 															<div class="row">
-																<div class="col-md-12 col-sm-12 text-center">
-																	<h2>REFLECTION</h2>
+																<div class="col-md-12 col-sm-12">
+																	<h3>REFLECTION</h3>
+																	<p class="mont">What I learned</p>
 																	</div>
 																</div>
-																<br><br>
+																<br>
+																	<div class="row">
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
 
-								                   <p>When designing a product,experience should come first. Otherwise, be prepared to spend more time and cost compared to initially required amounts later down the road.<br><br>
-								                   To help users understand where they are and locate what they are searching for, be contextual,transparent, and approachable.<br>
-								                 	<br><br>Always keep in mind that you are
-								                   designing for people. People prefer simplicity and clarity. Sometimes something simple as a list rather than a description can be clearer.<br><br>
-								                  Communicate frequently with developers about the specifics.<br><br>
-								                   hen users are involved in the design process either throug testing or other research methods, results are better.<br><br>
+								                   <p>When attempting a redesign, figure out why the previous designers designed the product in the way they did.<br><br>
+								                   When designing for a company, make sure the visuals for the product stay within company's branding and style guide.<br>
+								                 	<br>Frequently communicate with developers about specific details of the design rather than relying on them to list all the limitations.<br><br>
+																	Determined that I want to be a designer and not a researcher. The type of design I enjoy is design research while UX research roles require a different set of skills.
+																	<br><br><br><br>
+
+																	 <p class="mont">Where to improve</p>
+																	 <p><br>
+																	 Even if there is an existing style guide, try to be more persuasive about why the visuals should be updated.<br><br>
+								                   Learn how to design for motion. Tackle more visually heavy projects and wove in motion design into interaction design.</p>
+
+
 								               </div>
 								             </div>
 													 </section>
