--- a/lexmark.html
+++ b/lexmark.html
@@ -170,11 +170,11 @@
 <br><br>	<br><br>
 		<div class="row">
 
-				<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+				<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
 						<p class="text-center bold">Previous Design</p>
 						<img src="images/newcomparison.png" class="img-responsive center" style="max-width:100%"><br>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+				<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.5s">
 						<p class="text-center bold">New Design</p>
 						<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%"><br>
 				</div>
@@ -190,13 +190,13 @@
 
 			<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-						<h4 class="text-center">Previous Design</h4>
+						<h4 class="text-center bold">Previous Design</h4>
 								<img src="images/ergonomicformold.png" class="img-responsive" style="max-width:100%">
 
 
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".6s">
-							<h4 class="text-center">New Design</h4>
+							<h4 class="text-center bold">New Design</h4>
 							<img src="images/ergonomicformnew.png" class="img-responsive" style="max-width:100%"><br></div>
 				</div><br>
 
@@ -290,7 +290,7 @@
 				</div>
 			</div> -->
 				<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/lexmarkoldflow.png" class="img-responsive center" style="max-width:100%">
+					<img src="images/lexmarkoldflow.png" class="img-responsive center" style="max-width:100%"><br><br>
 		</div>
 			<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
 				<h4 style="color:#145930;">PAIN POINT I</h4>
@@ -312,7 +312,7 @@
 	<h4 style="color:#145930;">PAIN POINT III</h4>
 	<p>The forms were extensive and pushed users to phone in requests rather than use the existing online system. </p>
 </div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".9s">
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1s">
 	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
 	<p>Make the online system seem less daunting by redesigning all 10 forms. Make them clear and concise.</p>
 </div>
