--- a/lexmark.html
+++ b/lexmark.html
@@ -140,7 +140,7 @@
 <br><br>
 
 			<div class="row">
-				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
+				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.2s">
 					<img src="images/lexmarkquotes.png" class="img-responsive" style="max-width:100%">
 				</div>
 			</div>
@@ -391,7 +391,7 @@
 						<img src="images/numbertwo.png" class="img-responsive" style="max-width:90%"></div>
 
 					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-					<p>Prevent user error by keeping the information digestible at a glance and limiting user actions (e.g. using radio buttons rather than checkboxes will only allow users to select one option).</p><br>
+					<p>Prevent user error by keeping the information digestible at a glance and limiting user actions (e.g. using radio buttons rather than checkboxes will only allow users to select one option).</p><br><br>
 				</div></div>
 				<div class= "row">
 					<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
