--- a/lexmark.html
+++ b/lexmark.html
@@ -68,6 +68,7 @@
 </div>
 
 <!-- about section -->
+
 	<section id="overview">
 		<div class="container">
 			<div class="content">
@@ -112,13 +113,7 @@
 	</div>
 	</section>
 
-	<!-- home section -->
-		<!-- <section id="lexmark">
-			<div class="container">
-				<div class="row">
-				</div>
-			</div>
-		</section> -->
+
 
 	<section id="problem">
 		<div class="container">
@@ -140,7 +135,7 @@
 <br><br>
 
 			<div class="row">
-				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.2s">
+				<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
 					<img src="images/lexmarkquotes.png" class="img-responsive" style="max-width:100%">
 				</div>
 			</div>
@@ -337,7 +332,13 @@
 						<img src="images/lexmarkbaselinesuccessgraph.png" class="img-responsive" style="max-width:100%">
 	    </div>
 		</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<p><br><br>Employees were failing almost once out of every two attempts to find the right form. The usability tests helped me pinpoint the exact steps in the user flow where users were making errors.
+			</div>
+		</div>
 	  </div>
+	</div>
 	</section>
 
 
@@ -358,12 +359,13 @@
 						<h3>NEW INFORMATION ARCHITECTURE</h3>
 					</div></div><br><br>
 						<div class="row">
-							<!-- <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-									<p>In the previous design, when requesting a security camera, "Site Operations Security Request" seems like a great option, until one clicks on the form and realizes the form is only for Zhuhai, China. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p>
-						</div> -->
+
 				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
 			<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%">
 		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<p><br><br>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p>
+	</div>
 </section>
 
 <section id="graybg">
@@ -398,7 +400,7 @@
 						<img src="images/numberthree.png" class="img-responsive" style="max-width:90%"></div>
 
 					<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-					<p>Build users confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
+					<p>Build users' confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
 				</div></div>
 		</div>
 		</div>
@@ -452,13 +454,16 @@
 																			<p class="mont">My design demonstrated a 36% improvement</p>
 																		</div>
 
-																	</div><br><br><br>
+																	</div><br><br>
 															 		 <div class="row">
 																 <!-- <div class="col-lg-6 col-md-6 col-sm-12">
 								                   <P>Usability testing of the new design showed a 36% improvement. Like the previous test, we recruited ten employees and each test included ten of the same tasks. After the final round of testing, I made minor changes to strings to clear up some confusion in hopes to raise the 89% success rate before writing the documentation for developers.</p></div> -->
 																		 <div class="col-lg-12 col-md-12 col-sm-12">
 								                   <img src="images/lexmarkfinaltest.png" class="img-responsive" style="max-width:100%"></div></div>
-								              </div>
+																	 <div class="row">
+		 														<div class="col-lg-12 col-md-12 col-sm-12">
+		 															<P><br><br>After the final round of testing, I made minor changes to strings to further increase the 89% success rate before before writing and turning in the documentation for developers.</p></div></div>
+														 </div>
 								             </div>
 													 </section>
 
