--- a/lexmark.html
+++ b/lexmark.html
@@ -74,13 +74,11 @@
 			<div class="content">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<p class="title bold">Helping ServiceNow Service Now</p><br>
+					<p class="title bold">Helping ServiceNow Service Now 👩🏻‍💻</p><br>
 					<!-- <p>Web</p> -->
-					<p>May - Aug 2019</p><br>	<br>
+					<p>UX Design Internship during May - Aug 2019 </p><br>	<br>
 </div>
-<div class="col-md-2 col-sm-12">
 
-</div>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h3>OVERVIEW</h3>
 <p>As a UX design intern at Lexmark, I led a user-centered design project to redesign ServiceNow, an internal service tool for Lexmark employees to submit requests for any items or services that they need. My final design demonstrated a 36% improvement.
@@ -225,16 +223,16 @@
 				</div> -->
 </div>
 		<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".4s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay=".4s">
 						<!-- <h4 style="font-family: 'Quicksand', sans-serif;">Previous Design</h4> -->
 						<br><br><img src="images/trophy.png" class="img-responsive center" style="max-width:30%"><br>
 						<p>Presented my project to Lexmark and placed 2nd in the "non-engineering" category.</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".6s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay=".6s">
 						<br><br><img src="images/like.png" class="img-responsive center" style="max-width:30%"><br>
 						<p>Demonstrated to upper level management that working on internal tools is just as important as working on customer facing products.</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay=".8s">
+				<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp text-center" data-wow-delay=".8s">
 					<br><br><img src="images/happy.png" class="img-responsive center" style="max-width:30%"><br>
 <p>Highlighted the importance of UX research to a company that is code first, revise later.</p>
 				</div>
@@ -250,7 +248,7 @@
 				<div class="content">
 		<div class= "row">
 			<div class="col-lg-12 col-md-12 col-sm-12">
-				<h3>DESIGN PROCESS</h3>
+				<h3>PROCESS</h3>
 			</div>
 
 		</div>
@@ -295,19 +293,19 @@
 			<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
 			<p>Conduct a card sort and come up with a new information architecture structure that best reflects users' existing mental models.</p><br><br><br><br>
 </div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
 	<h4 style="color:#145930;">PAIN POINT II</h4>
 	<p>Employees were unsure if the form they were using was correct. </p>
 </div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
 	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
 	<p>Give users context and prevent errors whereever possible. Help build users' confidence by making it clear they are taking the correct or wrong steps. </p><br>
 <br><br><br></div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".9s">
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
 	<h4 style="color:#145930;">PAIN POINT III</h4>
 	<p>The forms were extensive and pushed users to phone in requests rather than use the existing online system. </p>
 </div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="1s">
+<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
 	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
 	<p>Make the online system seem less daunting by redesigning all 10 forms. Make them clear and concise.</p>
 </div>
@@ -462,7 +460,7 @@
 								                   <img src="images/lexmarkfinaltest.png" class="img-responsive" style="max-width:100%"></div></div>
 																	 <div class="row">
 		 														<div class="col-lg-12 col-md-12 col-sm-12">
-		 															<P><br><br>After the final round of testing, I made minor changes to strings to further increase the 89% success rate before before writing and turning in the documentation for developers.</p></div></div>
+		 															<P><br><br>After the final round of testing which included the same 10 tasks as before but conducted with 10 different employees, I made minor changes to strings to hopefully further increase the 89% success rate. I finished off the project with writing and turning in the documentation for developers.</p></div></div>
 														 </div>
 								             </div>
 													 </section>
