--- a/vegout.html
+++ b/vegout.html
@@ -129,7 +129,7 @@
 				</section>
 
 
-				<section id="solution">
+				<section id="solutiongray">
 					<div class="container">
 							<div class="content">
 					<div class="row">
@@ -222,13 +222,13 @@
 			<section id="graybg">
 				<div class="container">
 					<div class="content">
-						<div class="col-md-12 col-sm-12 text-center">
+						<!-- <div class="col-md-12 col-sm-12 text-center">
 							<h2>Phase 1 of 4: Understanding</h2>
-					 </div><br><br><br><br><br><br><br>
+					 </div><br><br><br><br><br><br><br> -->
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
 							<h3>COMPETITIVE ANALYSIS</h3>
-							<p class="mont">How do other apps try to increase vegan diets?<br><br></p>
+							<p class="mont">How do other apps try to encourage vegan diets?<br><br></p>
 						<img src="images/vegoutcompetitor.png" class="img-responsive center" style="max-width:100%">
 </div>
 					</div>
@@ -256,14 +256,14 @@
 			<section id="graybg">
 				<div class="container">
 					<div class="content">
-						<div class="col-md-12 col-sm-12 text-center">
+						<!-- <div class="col-md-12 col-sm-12 text-center">
 							<h2>Phase 2 of 4: Identify</h2>
-					 </div><br><br><br><br><br><br><br>
+					 </div><br><br><br><br><br><br><br> -->
 
 								<div class="row">
 									<div class="col-lg-12 col-md-12 col-sm-12">
 											<h3>PERSONAS</h3>
-											<p class="mont">Users want concrete metrics about how their meat-free diets are impacting the world<br><br></p>
+											<p class="mont">Different users want to see different statistics about their meat-free diet's positive impact<br><br></p>
 
 											<img src="images/personas.png" class="img-responsive center" width="100%">
 				</div>
@@ -294,12 +294,12 @@
 			</section>
 
 
-	<section id="graybg">
+	<!-- <section id="graybg">
 		<div class="container">
 					<div class="content">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">Phase 3 of 4: Exploring</h1>
+					<h2 class="heading bold">Phase 3 of 4: Exploring</h2>
 		      </div>
 				</div>
 
@@ -335,59 +335,81 @@
 																	 </div>
 									               </div>
 									             </div>
-														 </section>
+														 </section> -->
 
-  <section id="graybg">
-    <div class="container">
-			<div class="content">
-      <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <h3>WIREFRAMES + USER TESTS</h3>
-            <p>A lot of the usability issues from the paper prototypes were addressed in the first digital prototype. During debriefing, I attempted to get more feedback on the feelings and the product functions. The most common words used to describe my prototype were busy, engaging, responsive, overwhelming, and compelling.<br>TAKEAWAY: Although I tried simplifying the dashboard, it was not enough. It needs to be more simple & “sleek.” Usability issues are important but so is the overall feel and vibe of the product. Visual design needs more work.</p>
-      </div>
-    </div>
-	</div>
-</div>
-  </section>
-
-													 <section class="graybg">
+													 <section id="solutiongray">
 													 	<div class="container">
-													 		<div class="row">
+															<div class="content">
+													 		<!-- <div class="row">
 													 			<div class="col-md-12 col-sm-12 text-center">
-													 				<h1 class="heading bold"><br><br><br>Phase 3 of 3: Materialize</h1>
-																	</div>
+													 				<h2>Phase 4 of 4: Materialize</h2>
+																	</div><br><br><br><br><br><br><br>
+																</div> -->
+																<div class="row">
 																	<div class="col-lg-12 col-md-12 col-sm-12">
-
 								                   <h3>SPECIFY DESIGN CONTEXT</h3>
+																	 <p class="mont">Focusing on the bare necessities for a successful product</p><br><br>
 								                 </div>
 																 <div class="col-lg-12 col-md-12 col-sm-12">
 
 
-								                   <p>After ideating, exploring, and two rounds of user testing, I had a clearer idea on what was NECESSARY for my app to succeed and what other features were overwhelming the user. <br> Goal:  Design Veg-Out so that it can become a one-stop-app for all needs when attempting to reduce meat-intake. <br>Essential Functions: preset & manageable weekly goal
-                                     <li>positive reinforcement from display of accumulated benefits from users’ number of meat-free days</li>
-                                      <li>locating communities for social support</li>
-<li>equipped with vegan meal recipes to go meat-free</li><br>
+								                   <p>After ideating, exploring, and two rounds of user testing, I had a clearer idea on what was necessary for my app to succeed and what other features were overwhelming the user. <br> <br><br>
+																		 <!-- <span style="font-weight: bold">Essential Functions:</span>
+                                     <li>display of accumulated benefits from users’ number of meat-free days</li>
+                                      <li>ability to locate communities for social support</li>
+																			<li>access to vegan meal recipes to go meat-free</li>
+																			<li>access to education about and latest news of vegan diets</li><br>
 
-Human + Social Processes: People like simplicity and connecting with others
-Ethics of My Design: Functional, convenient, don’t contribute to alert fatigue
 
-                                   </p><br><br>
+																			<p>
+																		 	 <span style="font-weight: bold">Human Processes:</span>
+																		 	 <li>Don't contribute to alert fatigue</li>
+																		 		<li>People want to help</li>
+																		 		<li>People are more likely to be encouraged by positive reinforcement</li>
+
+                                   </p> -->
 
 								                 </div>
 								               </div>
 								             </div>
+													 </div>
 													 </section>
-<section>
-								             <div class="padding">
-								               <div class="container">
-																 <div class="row">
-																 <div class="col-lg-12 col-md-12 col-sm-12">
-								                     <h3><br><br>FINAL DESIGN</h3><br>
-								                   </div>
-																 </div>
-																  <div class="row">
-																	 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
 
+															 <section style="background-color: #f9f9f9; padding-bottom: 130px;">
+																 <div class="container">
+																					 <div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp text-center" data-wow-delay=".2s">
+																							 <br><br><img src="images/vegoutinfo.png" class="img-responsive center" style="max-width:100%"><br>
+																					 </div>
+																				 </div>
+																	 </section>
+
+
+
+													 <section id="section">
+													  <div class="container">
+													 	 <div class="content">
+													 	 <div class="row">
+													 		 <div class="col-md-12 col-sm-12">
+													 			 <h3>REFLECTION</h3>
+													 			 <p class="mont">What I learned</p>
+													 			 </div>
+													 		 </div>
+													 		 <br>
+													 			 <div class="row">
+													 				<div class="col-lg-12 col-md-12 col-sm-12">
+													 				<p>Technology only amplifies underlying human forces. For technology to have positive impact, the right intent and capacity have to be there first. <br><br>
+													 				When designing for an app that is meant to encourage a lifestyle change, it does not mean include many features. Try only designing for the bare necessity for products to succeed.
+													 			 <br><br><br><br>
+
+													 				<p class="mont">Where to improve</p>
+													 				<p><br>
+													 				Push myself further in visual design by thinking about the affordances on and transitions between the screens.</p>
+
+
+													 		</div>
+													 	</div>
+													 </section>
+													 <!--
 
 
 
